Properly update the 'simple' theme

We have to call the callback manually to update the theme when it's changed.
Also make sure that style-set signal is only connected once and we update the
theme only if the 'simple' one is used.

https://bugzilla.gnome.org/show_bug.cgi?id=664795